src/tests/fixtures/enums/ImplicitlyNumericEnum.ts.expected
-----------------
INPUT
----------------- 
/** @GQLEnum */
enum Enum {
  VALID,
  INVALID,
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/enums/ImplicitlyNumericEnum.ts:3:3 - error: Expected `@GQLEnum` enum members to have string literal initializers. For example: `FOO = 'foo'`.

If you think <library name> should be able to infer this type, please report an issue at <issue URL>.

3   VALID,
    ~~~~~
